syntax = "proto3";

package pb;

option go_package = "github.com/paweldyl/blog-backend/pb";

message DeletePostRequest {
    string id = 1;
}


